# mcp-trace

./: README.md  pyproject.toml
docs/: data-model.md  hermes-integration.md
scripts/: smoke_test.py
src/mcp_trace/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  server.py
src/mcp_trace/storage/: __init__.py  run_store.py
src/mcp_trace/tools/: __init__.py  query.py  runs.py
tests/: test_storage.py
